# egui_inspect

./: Cargo.toml  README.md  update_version.sh
egui_example/: Cargo.toml  README.md  fields.toml
egui_example/src/: autoprogress.rs  log_test.rs  main.rs  showcase.rs  toml_form_dialogue.rs
egui_inspect/: Cargo.toml
egui_inspect/src/: background_task.rs  base_type_inspect.rs  egui_types.rs  lib.rs  logging.rs  quick_app.rs  search_select.rs  serialization_types.rs  utils.rs
egui_inspect_derive/: Cargo.toml
egui_inspect_derive/src/: internal_paths.rs  lib.rs  utils.rs
egui_inspect_derived/: Cargo.toml
egui_inspect_derived/src/: lib.rs
egui_inspect_wrap/: Cargo.toml
egui_inspect_wrap/src/: lib.rs
examples/: README.md
examples/autoprogress/: Cargo.toml
examples/autoprogress/src/: main.rs
examples/frag_viewport/: Cargo.toml
examples/frag_viewport/src/: main.rs
examples/log_view/: Cargo.toml
examples/showcase/: Cargo.toml
examples/showcase/src/: main.rs
examples/toml_form_dialogue/: Cargo.toml
examples/toml_form_dialogue/src/: main.rs
