[package]
name = "egui_example"
version = "0.1.0"
edition = "2021"

publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_inspect = { path = "../egui_inspect" }
egui_inspect_wrap = { path = "../egui_inspect_wrap" }
eframe = "0.24"
egui = "0.24"
