[package]
name = "egui_example"
version = "0.1.0"
edition = "2021"

publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "autoprogress"
path = "src/autoprogress.rs"

[[bin]]
name = "showcase"
path = "src/showcase.rs"

[dependencies]
egui_inspect = { path = "../egui_inspect" }
egui_inspect_wrap = { path = "../egui_inspect_wrap" }
eframe = "0.25"
egui = "0.25"
egui_plot = "0.25"
