[package]
name = "egui_example"
version = "0.1.0"
edition = "2021"

publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "autoprogress"
path = "src/autoprogress.rs"

[[bin]]
name = "showcase"
path = "src/showcase.rs"

[[bin]]
name = "toml_form_dialogue"
path = "src/toml_form_dialogue.rs"

[dependencies]
egui_inspect = { path = "../egui_inspect", features = ["toml"] }
egui_inspect_wrap = { path = "../egui_inspect_wrap" }
egui = "0.28.0"
eframe = "0.28"
egui_plot = "0.28"
better_default = "1.0.5"
toml = "0.8.14"
clap = { version = "4.5.8", features = ["derive"] }
