[package]
name = "egui_inspect"
version = "0.1.4"
edition = "2021"
description = "Easily creating UI to preview and edit data"
readme = "../README.md"
license = "MIT"
categories = ["gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_inspect_derive = { path = "../egui_inspect_derive", version = "0.1" }
egui = "0.27"
eframe = "0.27"
