[package]
name = "egui_inspect"
version = "0.31.0"
edition = "2021"
description = "Easily creating UI to preview and edit data"
readme = "../README.md"
license = "MIT"
categories = ["gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.31"
eframe = "0.31"
egui_extras = { version = "0.31", features = ["datepicker"], optional = true }
egui_inspect_derive = { path = "../egui_inspect_derive" }

derive-getters = "0.5"
fuzzy-matcher = "0.3.7"

toml = { version = "0.8.14", optional = true }
chrono = { version = "0.4.38", optional = true }

log = { version = "0.4.22", optional = true }
fern = { version = "0.7", optional = true }

[features]
toml = ["dep:toml", "dep:egui_extras", "dep:chrono"]
logging = ["dep:log", "dep:fern", "dep:chrono"]
