[package]
name = "showcase"
version = "0.32.0"
edition = "2021"

publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_inspect = { path = "../../egui_inspect", features = ["plotting"] }
egui_inspect_wrap = { path = "../../egui_inspect_wrap" }
