[package]
name = "toml_form_dialogue"
version = "0.33.0"
edition = "2021"

publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_inspect = { path = "../../egui_inspect", features = ["toml"] }
toml = "0.8.14"
clap = { version = "4.5.8", features = ["derive"] }
